// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spatial audio test suite first private zone should be updated 1`] = `
Object {
  "dimension": Object {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`spatial audio test suite first private zone should be updated 2`] = `
Object {
  "dimension": Object {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "scale": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`spatial audio test suite instance should match the snapshot 1`] = `
Object {
  "createPrivateZone": [Function],
  "deletePrivateZone": [Function],
  "privateZones": Map {},
  "setSpatialEnvironment": [Function],
  "setSpatialPosition": [Function],
  "updatePrivateZone": [Function],
}
`;

exports[`spatial audio test suite private zones should be empty after deleting the last item 1`] = `
Object {
  "dimension": Object {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`spatial audio test suite private zones should be empty after deleting the last item 2`] = `Array []`;

exports[`spatial audio test suite returned zones should included the one just created 1`] = `
Object {
  "dimension": Object {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`spatial audio test suite setSpatialEnvironment 1`] = `
Object {
  "forward": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "right": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "scale": Object {
    "x": 10,
    "y": 10,
    "z": 10,
  },
  "up": Object {
    "x": 1,
    "y": 1,
    "z": 1,
  },
}
`;
